# ucs

./: .gitignore  CMakeLists.txt  README.md  package.xml  ucs.workspace.user.4.10-pre1
config/: qt_out.yaml
include/: my_rviz.h  ros_wrapper.h
src/: Page1Form.qml  Page2Form.qml  main.cpp  main.qml  my_rviz.cpp  ros_wrapper.cpp
src/control_module/: CMakeLists.txt  package.xml
src/control_module/include/control_module/: control.h
src/control_module/launch/: node_launcher.launch  start.launch
src/control_module/src/: control.cpp  main.cpp
src/diagnostic_hardware/: CMakeLists.txt  package.xml
src/diagnostic_hardware/include/diagnostic_hardware/: diagnostic_creator.h
src/diagnostic_hardware/src/: diagnostic_creator.cpp  example.cpp  main.cpp
src/gui_control_system/: .gitignore  CMakeLists.txt  package.xml  qml.qrc
src/gui_control_system/cmake/: Qt5QGCConfiguration.cmake
src/gui_control_system/config/: qt_out.yaml
src/gui_control_system/include/: logs_table_model.h  modelfilter.h  qml_wrapper.h  ros_wrapper.h
src/gui_control_system/include/custom_rviz/: simplegrid.h
src/gui_control_system/include/rosbag_parser/: logs_table_model.h  modelfilter.h
src/gui_control_system/include/wrappers/: qml_wrapper.h  ros_wrapper.h
src/gui_control_system/launch/: turtlebot3_world_remap.launch
src/gui_control_system/qml/: Page1Form.qml  Page2Form.qml  main.qml
src/gui_control_system/src/: Page1Form.qml  Page2Form.qml  displayconfig.cpp  logs_table_model.cpp  main.cpp  main.qml  modelfilter.cpp  my_rviz.cpp  qml_wrapper.cpp  robot_model.cpp  ros_wrapper.cpp  simplegrid.cpp
src/gui_control_system/translations/: main_de.ts  main_en.ts
src/msgs_publisher/: CMakeLists.txt  package.xml
src/msgs_publisher/src/: node.cpp
src/qmlcmake/: CMakeLists.txt  helloworld_de.ts  helloworld_en.ts
src/qmlcmake/config/: qt_out.yaml  rviz.rviz
src/qmlcmake/include/: qml_wrapper.h  robot_model.h  ros_wrapper.h
src/qmlcmake/src/: Page1Form.qml  Page2Form.qml  main.cpp  main.qml  qml_wrapper.cpp  ros_wrapper.cpp
src/robot_description/: CMakeLists.txt  Inertia Tensor is :  package.xml
src/robot_description/config/: display.rviz
src/robot_description/launch/: description.launch  display.launch
src/robot_description/urdf/: scooter.xacro  scooter_macro.xacro
src/robot_description/urdf/backup/: scooter.xacro  scooter_macro.xacro
src/robot_description/urdf/edited_backup/: scooter.xacro  scooter_macro.xacro
src/robot_gmapping/: CMakeLists.txt  package.xml
src/robot_gmapping/config/: gmapping_gazebo.yaml  gmapping_gazebo_niko.yaml
src/robot_gmapping/launch/: robot_gmapping_gazebo.launch  robot_gmapping_gazebo_niko.launch
src/robot_gmapping/rviz/: niko.rviz  test.rviz  turtlebot.rviz
src/robot_move_base/: CMakeLists.txt  package.xml
src/robot_move_base/config/gazebo/: base_local_planner_params (copy).yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/robot_move_base/config/itmo/: amcl_params.yaml  costmap_common_params.yaml  costmap_common_params_2lidar.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/robot_move_base/config/itmo/teb/: move_base_params.yaml  teb_local_planner_params.yaml
src/robot_move_base/launch/: move_base.launch  move_base_gazebo.launch  move_base_teb.launch
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_teleop/launch/: robot_teleop_key.launch
src/robot_teleop/nodes/: robot_teleop_key
src/rqt_console_plus/: CMakeLists.txt  package.xml.backup
src/rqt_console_plus/src/: logs_table_model.cpp  qnode.cpp
src/rviz/: CMakeLists.txt  package.xml
src/rviz/src/rviz/: visualization_frame.cpp  visualization_frame.h
src/rviz/src/rviz/default_plugin/: image_display.cpp  interactive_marker_display.cpp
src/rviz/src/rviz/ogre_helpers/: render_widget.cpp
src/rviz/src/rviz/qml/: main.qml
src/rviz2/: CMakeLists.txt  package.xml  plugin_description.xml  rviz.sublime-project  setup.py
src/rviz2/cmake/: rviz-extras.cmake.in
src/rviz2/src/python_bindings/rviz/: __init__.py
src/rviz2/src/python_bindings/shiboken/: CMakeLists.txt  typesystem.xml
src/rviz2/src/python_bindings/sip/: CMakeLists.txt  bool_property.sip  config.sip  display.sip  display_group.sip  ogre_logging.sip  property.sip  quick_visualization_frame.sip  rviz2.sip  tool.sip  tool_manager.sip  view_controller.sip  view_manager.sip  visualization_frame.sip  visualization_manager.sip  yaml_config_reader.sip  yaml_config_writer.sip
src/rviz2/src/rviz/default_plugin/: camera_display.cpp
src/rviz2/src/rviz/default_plugin/view_controllers/: orbit_view_controller.cpp
src/rviz2/src/rviz/ogre_helpers/: line.cpp
src/rviz2/src/rviz/robot/: robot_link.cpp
src/rviz2/src/test/: CMakeLists.txt
src/rviz2/src/test/qml/: quick_render_panel_test.qml
src/sensor_node/: CMakeLists.txt  package.xml
src/sensor_node/launch/: robot_control.launch  start_node.launch
src/sensor_node/scripts/: robot_control.py  sensor_sim.py  sensor_sim.py.autosave
src/sensor_node/src/: gazebo.cpp.autosave
src/sensor_node/srv/: emit_error.srv
src/slam_module/: CMakeLists.txt  package.xml
src/slam_module/include/slam_module/: self_diagnostic.h  slam_life_support.h
src/slam_module/launch/: turtlebot3_slam.launch  turtlebot3_slam_with_move_base.launch
src/slam_module/rviz/: turtlebot3_edited.rviz
src/slam_module/src/: slam_life_support.cpp  slam_module_node.cpp
src/yaml-cpp/: CMakeLists.txt  package.xml
