<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>The scooter_description package</description>

  <maintainer email="d.sokolov@rtc.ru">Sokolov Denis</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com</url>
  <author email="denis.sokolov48@gmail.com">scooter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!--<exec_depend>roslaunch</exec_depend>--> <!-- this is for launch test -->
</package>
