<?xml version="1.0"?>
<package format="2">
  <name>robot_gmapping</name>
  <version>0.1.0</version>
  <description>The gmapping packege for gmapping</description>

  <maintainer email="d.sokolov@rtc.ru">Sokolov Denis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>roslaunch</exec_depend>
</package>
