<?xml version="1.0"?>
<package format="2">
  <name>robot_move_base</name>
  <version>0.1.0</version>
  <description>The move_base package for scooter</description>

  <maintainer email="d.sokolov@rtc.ru">Sokolov Denis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>roslaunch</exec_depend>
</package>
