<?xml version="1.0"?>
<package format="2">
  <name>robot_teleop</name>
  <version>1.2.3</version>
  <description>
    Provides teleoperation using keyboard for mobile robot.
  </description>
  <license>BSD</license>
  <author>Sokolov Denis</author>
  <author email="d.sokolov@rtc.ru">Sokolov Denis</author>
  <maintainer email="d.sokolov@rtc.ru">Sokolov Denis</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
